# hapiDroidAVBOX

./: local.properties  readme.md  settings.gradle
app/: build.gradle  hapi.jks
app/src/androidTest/java/com/lcodecore/myapplication/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/lcodecore/myapplication/: App.kt  CameraActivity.kt  CustomTrackTestActivity.kt  ImageUtils.java  MainActivity.kt  MediaStoreUtils.java  ScreenActivity.kt  TextureUtils.java
app/src/main/res/layout/: activity_camera.xml  activity_custom_track.xml  activity_main.xml  activity_main2.xml  activity_main3.xml  activity_screen.xml
app/src/test/java/com/lcodecore/myapplication/: ExampleUnitTest.kt
baseAVUitl/: build.gradle
baseAVUitl/src/main/java/com/hapi/avparam/: AVChannelConfig.kt  AVImgFmt.kt  AVLog.kt  AVMediaFormatEXT.kt  AVSampleFormat.kt
gradle/wrapper/: gradle-wrapper.properties
hapiAVCapture/: build.gradle
hapiAVCapture/src/main/assets/: hapiavcapture_2dfragment_shader.glsl  hapiavcapture_oes_fragment_shader.glsl  hapiavcapture_vertex_shader.glsl
hapiAVCapture/src/main/java/com/hapi/avcapture/: AudioFrame.kt  AudioRender.kt  CameraXTrack.kt  HapiTrackFactory.kt  ICapturePreview.kt  MicrophoneTrack.kt  ScreenCaptureTrack.kt  TextureFramePixelGetter.kt  TrackPermissionCallback.kt  VideoFrame.kt  track.kt
hapiAVCapture/src/main/java/com/hapi/avcapture/camera/: CameraController.kt  CameraError.kt  CameraExecutorManager.kt  CameraExtensions.kt  CameraFaceType.kt  CameraHandlerManager.kt  ICameraThreadManager.kt
hapiAVCapture/src/main/java/com/hapi/avcapture/permission/: FragmentAttachCallback.java  PermissionAnywhere.kt  PermissionCallback.java  PermissionFragment.java
hapiAVCapture/src/main/java/com/hapi/avcapture/render/: CoverRender.kt
hapiAVCapture/src/main/java/com/hapi/avcapture/screen/: ImageListener.java  ScreenRecordService.kt
hapiAVCapture/src/main/java/com/hapi/avcapturerender/: CaptureVideoSizeAdapter.kt  GLTextureView.java  HapiAudioTrackRender.kt  HapiCaptureRender.kt  HapiCaptureSurfaceView.kt  HapiCaptureTextureView.kt  ImgFrameWrap.kt  OESCaptureRender.kt  Sampler2DCaptureRender.kt
hapiAVCapture/src/main/java/com/hapi/eglbase/: EGLCore.kt  FBOTools.kt  Image2DReaderSurfaceProvider.kt  ImageReaderSurfaceProvider.kt  OESSurfaceProvider.kt  OffscreenSurfaceHelper.kt  PBOTools.kt  ResReadUtils.kt  ShaderUtils.java  SurfaceProvider.kt
hapiAVEncoder/: build.gradle
hapiAVEncoder-ext-ffmpeg/: build.gradle
hapiAVEncoder-ext-ffmpeg/src/androidTest/java/com/hapi/avencoderext/ffmpeg/: ExampleInstrumentedTest.kt
hapiAVEncoder-ext-ffmpeg/src/main/: AndroidManifest.xml
hapiAVEncoder-ext-ffmpeg/src/main/cpp/: CMakeLists.txt  jinencoder.cpp
hapiAVEncoder-ext-ffmpeg/src/main/cpp/common/: BlockQueue.h  EncodeParam.h  ThreadSafeQueue.h
hapiAVEncoder-ext-ffmpeg/src/main/cpp/encoder/: IEncoder.cpp  IEncoder.h  SoftAudioEncoder.cpp  SoftAudioEncoder.h  SoftOutPutCallFunc.h  SoftVideoEncoder.cpp  SoftVideoEncoder.h
hapiAVEncoder-ext-ffmpeg/src/main/cpp/jni/: SoftEncoderContext.cpp  SoftEncoderContext.h
hapiAVEncoder/src/androidTest/java/com/hapi/avencoder/: ExampleInstrumentedTest.kt
hapiAVEncoder/src/main/: AndroidManifest.xml
hapiAVEncoder/src/main/cpp/: CMakeLists.txt  jinresample.cpp
hapiAVEncoder/src/main/cpp/common/: EncodeParam.h
hapiAVEncoder/src/main/cpp/include/libyuv/: cpu_id.h
hapiAVEncoder/src/main/cpp/resample/: AVResample.cpp  AVResample.h
hapiAVEncoder/src/main/cpp/util/: LogUtil.h
hapiAVEncoder/src/main/java/com/hapi/avencoder/: AVEncodeFrame.kt  AVEncoderFactory.kt  AVResampleContext.kt  EncodeParam.kt  EncoderCallBack.kt  EncoderStatus.kt  FPSFilter.kt  IEncoder.kt
hapiAVEncoder/src/main/jniLibsFFmpegbuild/: build_x264_clang.sh  ffmpeg  mac_build_ffmpeg.sh  x264
hapiAVEncoder/src/test/java/com/hapi/avencoder/: ExampleUnitTest.kt
hapiAVPackerClinet/: build.gradle
hapiAVPackerClinet/src/androidTest/java/com/hapi/avpackerclinet/: ExampleInstrumentedTest.kt
hapiAVPackerClinet/src/main/: AndroidManifest.xml
hapiAVPackerClinet/src/main/java/com/hapi/avpackerclinet/: AVOutPutContext.kt  AVStream.kt  AVStreamList.kt  FrameExt.kt  HapiAVPackerClient.kt  PackerClientListener.kt
hapiAVPackerClinet/src/test/java/com/hapi/avpackerclinet/: ExampleUnitTest.kt
hapiIMuxer/: build.gradle
hapiIMuxer/src/androidTest/java/com/hap/ioutput/: ExampleInstrumentedTest.kt
hapiIMuxer/src/main/java/com/hapi/ioutput/: AVOutputFormatFactory.kt  BaseOutputStreamer.kt  FileOutputStreamer.kt  FileWriterConnection.kt  IConnection.kt  MediaStream.kt  MediaStreamList.kt  OutputStreamCallBack.kt  OutputStreamer.kt  StreamObserver.kt  Streamable.kt  muxerext.kt
hapiIMuxer/src/test/java/com/hap/ioutput/: ExampleUnitTest.kt
outputstream-ext/droidLocalMediaMuxer/: build.gradle
outputstream-ext/droidLocalMediaMuxer/src/main/: AndroidManifest.xml
outputstream-ext/hapiRTMPLiveStreamer/: build.gradle
outputstream-ext/hapiRTMPLiveStreamer/src/main/: AndroidManifest.xml
outputstream-ext/hapiRTMPLiveStreamer/src/main/cpp/: CMakeLists.txt  rtmpmuxer.cpp
outputstream-ext/hapiRTMPLiveStreamer/src/main/cpp/include/librtmp/: amf.h  http.h  log.h  rtmp.h
outputstream-ext/hapiRTMPLiveStreamer/src/main/cpp/jni/: JNIRTMPConnection.h
outputstream-ext/hapiRTMPLiveStreamer/src/main/cpp/rtmp/: RTMPLiveConnection.cpp  RTMPLiveConnection.h
outputstream-ext/hapiSRTLiveSTreamer/: build.gradle
outputstream-ext/hapiSRTLiveSTreamer/src/main/: AndroidManifest.xml
outputstream-ext/hapiSRTLiveSTreamer/src/main/cpp/: CMakeLists.txt  srtmuxer.cpp
outputstream-ext/hapiSRTLiveSTreamer/src/main/cpp/include/openssl/: configuration.h
outputstream-ext/hapiSRTLiveSTreamer/src/main/cpp/jni/: JNISRTConnection.h
outputstream-ext/hapiSRTLiveSTreamer/src/main/cpp/srt/: Models.h  SrtLiveConnection.cpp  SrtLiveConnection.h  Stats.h
outputstream-ext/iconnection/: BlockQueue.h  CMakeLists.txt  IConnection.cpp  IConnection.h  IConnectionJNICaller.cpp  IConnectionJNICaller.h  LogUtil.h
(+86 files in other folders)
